[package]
name = "jwtlet-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
config = { workspace = true }
bon = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dsdk-facet-core = { workspace = true }
dsdk-facet-postgres = { workspace = true }
dsdk-facet-hashicorp-vault = { workspace = true }
jwtlet-core = { workspace = true }
jwtlet-postgres = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tokio-test = { workspace = true }
tracing-test = { workspace = true }

[lints]
workspace = true
